--- a/notificaciones/pom.xml
+++ b/notificaciones/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.ctsml</groupId>
 	<artifactId>notificaciones</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>notificaciones</name>
 	<description>Demo project for Spring Boot</description>
 	<url />
@@ -59,6 +59,11 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>5.6.0</version>  <!-- Reemplaza con la versión más reciente -->
 		</dependency>
 	</dependencies>
 
