Actualizacion en notificaciones

--- a/notificaciones/src/main/resources/application.properties
+++ b/notificaciones/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=notificaciones
 telegram.bot.token=7945846077:AAGdRfKoWiNK4UjmeFggPxkYvrjL5cyLIpw
 telegram.chat.url=https://api.telegram.org
+weather.clima.url=http://api.weatherstack.com/current
 logging.level.root=INFO
