--- a/notificaciones/pom.xml
+++ b/notificaciones/pom.xml
@@ -32,20 +32,16 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.boot</groupId><!-- starter dependency -->
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.boot</groupId><!-- starter dependency -->
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<!-- New Dependencies-->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -53,17 +49,17 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<groupId>org.springframework.boot</groupId><!-- starter dependency -->
+			<artifactId>spring-boot-starter-webflux</artifactId><!-- Permite crear aplicaciones web reactivas-->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.telegram</groupId>
-			<artifactId>telegrambots</artifactId>
-			<version>5.6.0</version>  <!-- Reemplaza con la versión más reciente -->
+			<groupId>org.telegram</groupId><!-- Telegram Dependency -->
+			<artifactId>telegrambots</artifactId><!-- Permite interactuar con bots de telegram-->
+			<version>5.6.0</version>
 		</dependency>
 	</dependencies>
 
